<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B90000"
        android:text="@string/seefood"
        android:textSize="80sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"/>
    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:background="@color/white"
        android:text="@string/the_shazam_for_food"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#f90000"/>
    <TextView
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_slogan"
        android:layout_marginTop="100dp"
        android:text="@string/let_s_get_started"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:background="#00000000"
        android:visibility="visible"/>
    <Button
        android:id="@+id/camera_button"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:backgroundTint="#ff0000"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/touch_to_seefood"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/touch_to_seefood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_to_seefood"
        android:layout_alignParentBottom="true"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:background="#00000000"
        android:visibility="invisible"/>
</RelativeLayout>